@@ -15,6 +15,7 @@ import java.util.*;
 
 import static java.lang.Boolean.FALSE;
 import static java.lang.Boolean.TRUE;
+import static java.util.Collections.emptyList;
 import static no.nav.arbeidsgiver.kandidat.kandidatsok.KatKode.*;
 import static no.nav.arbeidsgiver.kandidat.kandidatsok.Tilgjengelighet.midlertidigUtilgjengelig;
 import static no.nav.arbeidsgiver.kandidat.kandidatsok.Tilgjengelighet.tilgjengeligInnen1Uke;
@@ -60,27 +61,27 @@ public class EsCvObjectMother {
         utdanningsListe.add(utdanning1);
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
                 "Stentransport, Kragerø", "8341.01", "Anleggsmaskindrifter",
-                Set.of("Anleggsmaskindrifter", "Anleggsmaskinoperatør"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskindrifter", "Anleggsmaskinoperatør"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2013-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskindrifter"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskindrifter"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                Set.of("Anleggsmaskindrifter"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskindrifter"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
                 "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
                 "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
                 "NLI  Grenland", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
         yrkeserfaringsListe.add(yrkeserfaring1);
@@ -91,16 +92,16 @@ public class EsCvObjectMother {
         yrkeserfaringsListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 = new EsKompetanse(fraIsoDato("2016-03-14"), "3020813",
-                "Maskin- og kranførerarbeid", null, null, Collections.emptyList());
+                "Maskin- og kranførerarbeid", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "3281301",
-                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, Collections.emptyList());
+                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "506",
-                "Landtransport generelt", "Landtransport generelt", null, Collections.emptyList());
+                "Landtransport generelt", "Landtransport generelt", null, emptyList());
 
         EsKompetanse kompetanse4 = new EsKompetanse(fraIsoDato("2016-03-14"), "212", "Industri (bransje)",
-                "Mekanisk industri (bransje)", null, Collections.emptyList());
+                "Mekanisk industri (bransje)", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseList = new ArrayList<>();
         kompetanseList.add(kompetanse1);
@@ -183,7 +184,7 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker2);
 
         EsYrkeJobbonsker yrkeJobbonsker = new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode",
-                "Yrke jobb ønske Styrk beskrivelse", true, Collections.emptyList());
+                "Yrke jobb ønske Styrk beskrivelse", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -286,24 +287,24 @@ public class EsCvObjectMother {
         ArrayList<EsUtdanning> utdanningListe = new ArrayList<>();
         utdanningListe.add(EsUtdanning);
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2002-01-01"),
-                "Kodesentralen Vardø", "5746.07", "Programvareutvikler", Collections.singleton("Programvareutvikler"), "Fullstackutvikler",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Kodesentralen Vardø", "5746.07", "Programvareutvikler", Set.of("Programvareutvikler"), "Fullstackutvikler",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-07-01"),
                 "Programvarefabrikken Førde", "5746.07", "Systemutvikler",
-                Set.of("Systemutvikler", "Java-utvikler"), "Utvikling av nytt kandidatsøk", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Systemutvikler", "Java-utvikler"), "Utvikling av nytt kandidatsøk", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "Tjenestetest Norge", "6859.02", "Systemtester",
-                Set.of("Systemtester"), "Automatiske tester av nytt kandidatsøk", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Systemtester"), "Automatiske tester av nytt kandidatsøk", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2006-07-01"),
                 "lagerarbeiderne L. H.", "8659.03", "Lagermedarbeider", Set.of("Lagermedarbeider"), "Lagermedarbeider",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2017-04-01"),
                 "lagerarbeiderne L. H.", "8659.03", "Truckfører lager", Set.of("Truckfører lager"), "Stortruck", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 =
                 new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2019-09-26"), "Awesome coders AS", "5746.07",
@@ -318,16 +319,16 @@ public class EsCvObjectMother {
         yrkeserfaringListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 =
-                new EsKompetanse(fraIsoDato("2016-03-14"), "265478", "Javautvikler", null, null, Collections.emptyList());
+                new EsKompetanse(fraIsoDato("2016-03-14"), "265478", "Javautvikler", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "265478",
                 "Programvareutvikler", "Programvareutvikler", null, Arrays.asList("Javaprogrammerer", "Java (8)", "JDK"));
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "475136", "Lagermedarbeider",
-                "Lagermedarbeider", null, Collections.emptyList());
+                "Lagermedarbeider", null, emptyList());
 
         EsKompetanse kompetanse4 =
-                new EsKompetanse(fraIsoDato("2016-03-14"), "501", "Truckfører", "Truckfører", null, Collections.emptyList());
+                new EsKompetanse(fraIsoDato("2016-03-14"), "501", "Truckfører", "Truckfører", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseListe = new ArrayList<>();
         kompetanseListe.add(kompetanse1);
@@ -405,15 +406,15 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker2);
 
         EsYrkeJobbonsker yrkeJobbonsker =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Javaprogrammerer", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Javaprogrammerer", true, emptyList());
 
         EsYrkeJobbonsker yrkeJobbonsker1 =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Programvareutvikler", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Programvareutvikler", true, emptyList());
 
         EsYrkeJobbonsker yrkeJobbonsker2 =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Bonde", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Bonde", true, emptyList());
         EsYrkeJobbonsker yrkeJobbonsker3 =
-                new EsYrkeJobbonsker("1010.01", "Butikkmedarbeider", true, Collections.emptyList());
+                new EsYrkeJobbonsker("1010.01", "Butikkmedarbeider", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -460,26 +461,26 @@ public class EsCvObjectMother {
         utdanningListe.add(EsUtdanning);
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-02-01"),
                 "Butikken i nærheten", "1010.01", "Butikkmedarbeider", Set.of("Butikkmedarbeider"), "Butikkmedarbeider i Førde",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "Butikken i nærheten", "1010.01", "Butikkmedarbeider(dagligvarer)",
-                Set.of("Butikkmedarbeider(dagligvarer)", "Butikkmedarbeider"), "Butikkmedarbeider(dagligvarer)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Butikkmedarbeider(dagligvarer)", "Butikkmedarbeider"), "Butikkmedarbeider(dagligvarer)", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "Butikken langt unna", "1010.01", "Butikkmedarbeider(trevare)",
-                Set.of("Butikkmedarbeider(trevare)"), "Butikkmedarbeider(trevare)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Butikkmedarbeider(trevare)"), "Butikkmedarbeider(trevare)", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
                 "Butikken", "4561.03", "Butikkmedarbeider(elektronikk)",
-                Set.of("Butikkmedarbeider(elektronikk)"), "Butikkmedarbeider(elektronikk)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Butikkmedarbeider(elektronikk)"), "Butikkmedarbeider(elektronikk)", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 =
                 new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"), "Tvkanalen TV?", "5684.05",
-                        "Presentør", Set.of("Presentør"), "Presentør", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Presentør", Set.of("Presentør"), "Presentør", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), null, "NLI  Grenland",
-                "5684.05", "Nyhetsanker", Set.of("Nyhetsanker"), "Nyhetsanker", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "5684.05", "Nyhetsanker", Set.of("Nyhetsanker"), "Nyhetsanker", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringListe = new ArrayList<>();
         yrkeserfaringListe.add(yrkeserfaring1);
@@ -490,16 +491,16 @@ public class EsCvObjectMother {
         yrkeserfaringListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 =
-                new EsKompetanse(fraIsoDato("2016-03-14"), "152424", "Presentør", null, null, Collections.emptyList());
+                new EsKompetanse(fraIsoDato("2016-03-14"), "152424", "Presentør", null, null, emptyList());
 
         EsKompetanse kompetanse2 =
-                new EsKompetanse(fraIsoDato("2016-03-14"), "152424", "Nyhetsanker", "Nyhetsanker", null, Collections.emptyList());
+                new EsKompetanse(fraIsoDato("2016-03-14"), "152424", "Nyhetsanker", "Nyhetsanker", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "566895", "Butikkmedarbeider",
-                "Butikkmedarbeider", null, Collections.emptyList());
+                "Butikkmedarbeider", null, emptyList());
 
         EsKompetanse kompetanse4 = new EsKompetanse(fraIsoDato("2016-03-14"), "566895",
-                "Butikkmedarbeider(trevare)", "Butikkmedarbeider(trevare)", null, Collections.emptyList());
+                "Butikkmedarbeider(trevare)", "Butikkmedarbeider(trevare)", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseListe = new ArrayList<>();
         kompetanseListe.add(kompetanse1);
@@ -580,16 +581,16 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker1);
 
         EsYrkeJobbonsker yrkeJobbonsker =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Ordfører", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Ordfører", true, emptyList());
 
         EsYrkeJobbonsker yrkeJobbonsker1 =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Barnehageassistent", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Barnehageassistent", true, emptyList());
 
         EsYrkeJobbonsker yrkeJobbonsker2 =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Tester", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Tester", true, emptyList());
 
         EsYrkeJobbonsker yrkeJobbonsker3 =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Konsulent (data)", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Konsulent (data)", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -645,27 +646,27 @@ public class EsCvObjectMother {
         utdanningListe.add(EsUtdanning);
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2002-01-01"),
                 "Jokah", "1010.01", "Butikkmedarbeider", Set.of("Butikkmedarbeider"), "Butikkmedarbeider", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-04-01"),
                 "Nærbutikkern", "1010.01", "Butikkmedarbeider(klesbutikk)",
-                Set.of("Butikkmedarbeider(klesbutikk)"), "Butikkmedarbeider(klebutikk)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Butikkmedarbeider(klesbutikk)"), "Butikkmedarbeider(klebutikk)", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 =
                 new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-07-01"), "Tv tv tv", "5684.05",
-                        "Nyhetspresentør", Set.of("Nyhetspresentør"), "Nyhetspresentør", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Nyhetspresentør", Set.of("Nyhetspresentør"), "Nyhetspresentør", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 =
                 new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2016-07-01"), "Vard Group,avd.Brevik",
-                        "5684.05", "Hallovert", Set.of("Hallovert"), "Hallovert", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "5684.05", "Hallovert", Set.of("Hallovert"), "Hallovert", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 =
                 new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2017-04-01"), "DN teater", "5124.46",
-                        "Skuespiller", Set.of("Skuespiller"), "Skuespiller", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Skuespiller", Set.of("Skuespiller"), "Skuespiller", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), null,
                 "Dukketeateret Rena", "5124.46", "Skuespiller(dukketeater)",
-                Set.of("Skuespiller(dukketeater)"), "Skuespiller(dukketeater)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Skuespiller(dukketeater)"), "Skuespiller(dukketeater)", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringListe = new ArrayList<>();
         yrkeserfaringListe.add(yrkeserfaring1);
@@ -676,16 +677,16 @@ public class EsCvObjectMother {
         yrkeserfaringListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 =
-                new EsKompetanse(fraIsoDato("2016-03-14"), "152424", "Hallovert", null, null, Collections.emptyList());
+                new EsKompetanse(fraIsoDato("2016-03-14"), "152424", "Hallovert", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "566895", "Butikkmedarbeider",
-                "Butikkmedarbeider", null, Collections.emptyList());
+                "Butikkmedarbeider", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "564646",
-                "Butikkmedarbeider(klesbutikk)", "Butikkmedarbeider(klesbutikk)", null, Collections.emptyList());
+                "Butikkmedarbeider(klesbutikk)", "Butikkmedarbeider(klesbutikk)", null, emptyList());
 
         EsKompetanse kompetanse4 =
-                new EsKompetanse(fraIsoDato("2016-03-14"), "506", "Skuespiller", "Skuespiller", null, Collections.emptyList());
+                new EsKompetanse(fraIsoDato("2016-03-14"), "506", "Skuespiller", "Skuespiller", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseListe = new ArrayList<>();
         kompetanseListe.add(kompetanse1);
@@ -770,10 +771,10 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker4);
 
         EsYrkeJobbonsker yrkeJobbonsker =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Butikkmedarbeider", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Butikkmedarbeider", true, emptyList());
 
         EsYrkeJobbonsker yrkeJobbonsker1 =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Butikkmedarbeider", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Butikkmedarbeider", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -821,15 +822,15 @@ public class EsCvObjectMother {
 
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-02-01"),
-                "Bankhvelvet BBL", "4865.75", "Bankhvelvoperatør", Collections.singleton("Bankhvelvoperatør"), "Bankhvelvoperatør",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Bankhvelvet BBL", "4865.75", "Bankhvelvoperatør", Set.of("Bankhvelvoperatør"), "Bankhvelvoperatør",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 =
                 new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"), "Proggehula", "5746.07",
-                        "Progger", Set.of("Progger"), "Progger", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Progger", Set.of("Progger"), "Progger", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
-                "Test a.a.s", "6859.02", "Tester", Set.of("Tester"), "Tester", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Test a.a.s", "6859.02", "Tester", Set.of("Tester"), "Tester", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 =
                 new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"), "K.O. kranservice", "8342.01",
@@ -837,11 +838,11 @@ public class EsCvObjectMother {
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-06-02"),
                 "Lang transport A.S.", "8332.03", "Lastebil- \"Lastebil- og trailersjåførog trailersjåfør", Set.of("Lastebil- \"Lastebil- og trailersjåførog trailersjåfør"), "Sjåfør kl. 3",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato(null),
                 "Mekken mekk", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringListe = new ArrayList<>();
         yrkeserfaringListe.add(yrkeserfaring1);
@@ -852,16 +853,16 @@ public class EsCvObjectMother {
         yrkeserfaringListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 = new EsKompetanse(fraIsoDato("2016-03-14"), "3020813",
-                "Maskin- og kranførerarbeid(type 2 kran)", null, null, Collections.emptyList());
+                "Maskin- og kranførerarbeid(type 2 kran)", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "3281301",
-                "Mekanisk arbeid spesielt", "Mekanisk arbeid spesielt", null, Collections.emptyList());
+                "Mekanisk arbeid spesielt", "Mekanisk arbeid spesielt", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "3220201",
-                "Landtransport generelt", "Landtransport generelt", null, Collections.emptyList());
+                "Landtransport generelt", "Landtransport generelt", null, emptyList());
 
         EsKompetanse kompetanse4 = new EsKompetanse(fraIsoDato("2016-03-14"), "212", "Industri (bransje)",
-                "Mekanisk industri (bransje)", null, Collections.emptyList());
+                "Mekanisk industri (bransje)", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseListe = new ArrayList<>();
         kompetanseListe.add(kompetanse1);
@@ -943,16 +944,16 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker3);
 
         EsYrkeJobbonsker yrkeJobbonsker =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Industrimekaniker", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Industrimekaniker", true, emptyList());
 
         EsYrkeJobbonsker yrkeJobbonsker1 =
                 new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Lastebilsjåfør", true, Collections.singletonList("Trailersjåffis"));
 
         EsYrkeJobbonsker yrkeJobbonsker2 =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Butikkmedarbeider", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Butikkmedarbeider", true, emptyList());
 
         EsYrkeJobbonsker yrkeJobbonsker3 =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Konsulent (bank)", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Konsulent (bank)", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -1003,27 +1004,27 @@ public class EsCvObjectMother {
 
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-02-01"),
-                "Bankhvelvet BBL", "4865.75", "Bankhvelvoperatør", Collections.singleton("Bankhvelvoperatør"), "Bankhvelvoperatør",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Bankhvelvet BBL", "4865.75", "Bankhvelvoperatør", Set.of("Bankhvelvoperatør"), "Bankhvelvoperatør",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 =
                 new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"), "Proggehula", "5746.07",
-                        "Progger", Collections.singleton("Progger"), "Progger", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Progger", Set.of("Progger"), "Progger", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
-                "Test a.a.s", "6859.02", "Tester", Collections.singleton("Tester"), "Tester", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Test a.a.s", "6859.02", "Tester", Set.of("Tester"), "Tester", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 =
                 new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"), "K.O. kranservice", "8342.01",
-                        "Kranoperatør", Collections.singleton("Kranoperatør"), "Kranoperatør", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Kranoperatør", Set.of("Kranoperatør"), "Kranoperatør", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-06-02"),
-                "Lang transport A.S.", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 3",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Lang transport A.S.", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 3",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-11-01"),
-                "Mekken mekk", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Mekken mekk", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringListe = new ArrayList<>();
         yrkeserfaringListe.add(yrkeserfaring1);
@@ -1106,13 +1107,13 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker2);
 
         EsYrkeJobbonsker yrkeJobbonsker =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Industrimekaniker", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Industrimekaniker", true, emptyList());
 
         EsYrkeJobbonsker yrkeJobbonsker1 =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Lastebilsjåfør", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Lastebilsjåfør", true, emptyList());
 
         EsYrkeJobbonsker yrkeJobbonsker2 =
-                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Butikkmedarbeider", true, Collections.emptyList());
+                new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode", "Butikkmedarbeider", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -1162,27 +1163,27 @@ public class EsCvObjectMother {
         utdanningsListe.add(utdanning2);
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
                 "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
         yrkeserfaringsListe.add(yrkeserfaring1);
@@ -1193,16 +1194,16 @@ public class EsCvObjectMother {
         yrkeserfaringsListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 = new EsKompetanse(fraIsoDato("2016-03-14"), "3020813",
-                "Maskin- og kranførerarbeid", null, null, Collections.emptyList());
+                "Maskin- og kranførerarbeid", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "3281301",
-                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, Collections.emptyList());
+                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "506",
-                "Landtransport generelt", "Landtransport generelt", null, Collections.emptyList());
+                "Landtransport generelt", "Landtransport generelt", null, emptyList());
 
         EsKompetanse kompetanse4 = new EsKompetanse(fraIsoDato("2016-03-14"), "212", "Industri (bransje)",
-                "Mekanisk industri (bransje)", null, Collections.emptyList());
+                "Mekanisk industri (bransje)", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseList = new ArrayList<>();
         kompetanseList.add(kompetanse1);
@@ -1286,7 +1287,7 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker2);
 
         EsYrkeJobbonsker yrkeJobbonsker = new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode",
-                "Yrke jobb ønske Styrk beskrivelse", true, Collections.emptyList());
+                "Yrke jobb ønske Styrk beskrivelse", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -1332,27 +1333,27 @@ public class EsCvObjectMother {
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
                 "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
         yrkeserfaringsListe.add(yrkeserfaring1);
@@ -1363,16 +1364,16 @@ public class EsCvObjectMother {
         yrkeserfaringsListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 = new EsKompetanse(fraIsoDato("2016-03-14"), "3020813",
-                "Maskin- og kranførerarbeid", null, null, Collections.emptyList());
+                "Maskin- og kranførerarbeid", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "3281301",
-                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, Collections.emptyList());
+                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "506",
-                "Landtransport generelt", "Landtransport generelt", null, Collections.emptyList());
+                "Landtransport generelt", "Landtransport generelt", null, emptyList());
 
         EsKompetanse kompetanse4 = new EsKompetanse(fraIsoDato("2016-03-14"), "212", "Industri (bransje)",
-                "Mekanisk industri (bransje)", null, Collections.emptyList());
+                "Mekanisk industri (bransje)", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseList = new ArrayList<>();
         kompetanseList.add(kompetanse1);
@@ -1463,7 +1464,7 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker2);
 
         EsYrkeJobbonsker yrkeJobbonsker = new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode",
-                "Yrke jobb ønske Styrk beskrivelse", true, Collections.emptyList());
+                "Yrke jobb ønske Styrk beskrivelse", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -1508,27 +1509,27 @@ public class EsCvObjectMother {
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
                 "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
         yrkeserfaringsListe.add(yrkeserfaring1);
@@ -1539,16 +1540,16 @@ public class EsCvObjectMother {
         yrkeserfaringsListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 = new EsKompetanse(fraIsoDato("2016-03-14"), "3020813",
-                "Maskin- og kranførerarbeid", null, null, Collections.emptyList());
+                "Maskin- og kranførerarbeid", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "3281301",
-                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, Collections.emptyList());
+                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "506",
-                "Landtransport generelt", "Landtransport generelt", null, Collections.emptyList());
+                "Landtransport generelt", "Landtransport generelt", null, emptyList());
 
         EsKompetanse kompetanse4 = new EsKompetanse(fraIsoDato("2016-03-14"), "212", "Industri (bransje)",
-                "Mekanisk industri (bransje)", null, Collections.emptyList());
+                "Mekanisk industri (bransje)", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseList = new ArrayList<>();
         kompetanseList.add(kompetanse1);
@@ -1639,7 +1640,7 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker2);
 
         EsYrkeJobbonsker yrkeJobbonsker = new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode",
-                "Yrke jobb ønske Styrk beskrivelse", true, Collections.emptyList());
+                "Yrke jobb ønske Styrk beskrivelse", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -1685,27 +1686,27 @@ public class EsCvObjectMother {
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
                 "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
         yrkeserfaringsListe.add(yrkeserfaring1);
@@ -1716,16 +1717,16 @@ public class EsCvObjectMother {
         yrkeserfaringsListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 = new EsKompetanse(fraIsoDato("2016-03-14"), "3020813",
-                "Maskin- og kranførerarbeid", null, null, Collections.emptyList());
+                "Maskin- og kranførerarbeid", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "3281301",
-                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, Collections.emptyList());
+                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "506",
-                "Landtransport generelt", "Landtransport generelt", null, Collections.emptyList());
+                "Landtransport generelt", "Landtransport generelt", null, emptyList());
 
         EsKompetanse kompetanse4 = new EsKompetanse(fraIsoDato("2016-03-14"), "212", "Industri (bransje)",
-                "Mekanisk industri (bransje)", null, Collections.emptyList());
+                "Mekanisk industri (bransje)", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseList = new ArrayList<>();
         kompetanseList.add(kompetanse1);
@@ -1816,7 +1817,7 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker2);
 
         EsYrkeJobbonsker yrkeJobbonsker = new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode",
-                "Yrke jobb ønske Styrk beskrivelse", true, Collections.emptyList());
+                "Yrke jobb ønske Styrk beskrivelse", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -1861,27 +1862,27 @@ public class EsCvObjectMother {
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
                 "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industri'mekaniker"), "Industrimekaniker", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Set.of("Industri'mekaniker"), "Industrimekaniker", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
         yrkeserfaringsListe.add(yrkeserfaring1);
@@ -1892,16 +1893,16 @@ public class EsCvObjectMother {
         yrkeserfaringsListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 = new EsKompetanse(fraIsoDato("2016-03-14"), "3020813",
-                "Maskin- og kranførerarbeid", null, null, Collections.emptyList());
+                "Maskin- og kranførerarbeid", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "3281301",
-                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, Collections.emptyList());
+                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "506",
-                "Landtransport generelt", "Landtransport generelt", null, Collections.emptyList());
+                "Landtransport generelt", "Landtransport generelt", null, emptyList());
 
         EsKompetanse kompetanse4 = new EsKompetanse(fraIsoDato("2016-03-14"), "212", "Industri (bransje)",
-                "Mekanisk industri (bransje)", null, Collections.emptyList());
+                "Mekanisk industri (bransje)", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseList = new ArrayList<>();
         kompetanseList.add(kompetanse1);
@@ -1992,7 +1993,7 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker2);
 
         EsYrkeJobbonsker yrkeJobbonsker = new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode",
-                "Yrke jobb ønske Styrk beskrivelse", true, Collections.emptyList());
+                "Yrke jobb ønske Styrk beskrivelse", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -2037,27 +2038,27 @@ public class EsCvObjectMother {
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
                 "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
         yrkeserfaringsListe.add(yrkeserfaring1);
@@ -2068,16 +2069,16 @@ public class EsCvObjectMother {
         yrkeserfaringsListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 = new EsKompetanse(fraIsoDato("2016-03-14"), "3020813",
-                "Maskin- og kranførerarbeid", null, null, Collections.emptyList());
+                "Maskin- og kranførerarbeid", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "3281301",
-                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, Collections.emptyList());
+                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "506",
-                "Landtransport generelt", "Landtransport generelt", null, Collections.emptyList());
+                "Landtransport generelt", "Landtransport generelt", null, emptyList());
 
         EsKompetanse kompetanse4 = new EsKompetanse(fraIsoDato("2016-03-14"), "212", "Industri (bransje)",
-                "Mekanisk industri (bransje)", null, Collections.emptyList());
+                "Mekanisk industri (bransje)", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseList = new ArrayList<>();
         kompetanseList.add(kompetanse1);
@@ -2168,7 +2169,7 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker2);
 
         EsYrkeJobbonsker yrkeJobbonsker = new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode",
-                "Yrke jobb ønske Styrk beskrivelse", true, Collections.emptyList());
+                "Yrke jobb ønske Styrk beskrivelse", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -2213,27 +2214,27 @@ public class EsCvObjectMother {
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
                 "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2013-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
-                "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker",
+                "YRKE_ORGNR", "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
                 "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
         yrkeserfaringsListe.add(yrkeserfaring1);
@@ -2244,16 +2245,16 @@ public class EsCvObjectMother {
         yrkeserfaringsListe.add(yrkeserfaring6);
 
         EsKompetanse kompetanse1 = new EsKompetanse(fraIsoDato("2016-03-14"), "3020813",
-                "Maskin- og kranførerarbeid", null, null, Collections.emptyList());
+                "Maskin- og kranførerarbeid", null, null, emptyList());
 
         EsKompetanse kompetanse2 = new EsKompetanse(fraIsoDato("2016-03-14"), "3281301",
-                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, Collections.emptyList());
+                "Mekanisk arbeid generelt", "Mekanisk arbeid generelt", null, emptyList());
 
         EsKompetanse kompetanse3 = new EsKompetanse(fraIsoDato("2016-03-14"), "506",
-                "Landtransport generelt", "Landtransport generelt", null, Collections.emptyList());
+                "Landtransport generelt", "Landtransport generelt", null, emptyList());
 
         EsKompetanse kompetanse4 = new EsKompetanse(fraIsoDato("2016-03-14"), "212", "Industri (bransje)",
-                "Mekanisk industri (bransje)", null, Collections.emptyList());
+                "Mekanisk industri (bransje)", null, emptyList());
 
         ArrayList<EsKompetanse> kompetanseList = new ArrayList<>();
         kompetanseList.add(kompetanse1);
@@ -2344,7 +2345,7 @@ public class EsCvObjectMother {
         geografiJobbonskerListe.add(geografiJobbonsker2);
 
         EsYrkeJobbonsker yrkeJobbonsker = new EsYrkeJobbonsker("Yrke jobb ønskeStyrk Kode",
-                "Yrke jobb ønske Styrk beskrivelse", true, Collections.emptyList());
+                "Yrke jobb ønske Styrk beskrivelse", true, emptyList());
 
         ArrayList<EsYrkeJobbonsker> yrkeJobbonskerListe = new ArrayList<>();
         yrkeJobbonskerListe.add(yrkeJobbonsker);
@@ -2388,7 +2389,7 @@ public class EsCvObjectMother {
     public static EsYrkeserfaring giveMeYrkeserfaring() {
         return new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
                 "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
-                "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "YRKE_NACEKODE", false, emptyList(), "Oslo");
     }
 
     public static EsUtdanning giveMeUtdanning() {
